# Overload

./: .gitignore  CMakeLists.txt  README.md  SKINNING_IMPLEMENTATION.md  premake5.lua
.github/workflows/: linux-release.yml  linux.yml  msbuild.yml  windows-release.yml  windows.yml  windows_release.yml
Dependencies/ImGui/: premake5.lua
Dependencies/ImGui/src/: imgui_demo.cpp
Dependencies/assimp/: CMakeLists.txt  premake5.lua
Dependencies/baregl/: premake5.lua
Dependencies/bullet3/: premake5.lua
Dependencies/clay/: premake5.lua
Dependencies/clay/src/: clay.c
Dependencies/freetype/: premake5.lua
Dependencies/glad/: premake5.lua
Dependencies/glfw/: premake5.lua
Dependencies/lua/: premake5.lua
Dependencies/lua/include/: sol.hpp
Dependencies/sol/: premake5.lua
Dependencies/soloud/: premake5.lua
Dependencies/tinyxml2/: premake5.lua
Dependencies/tracy/: premake5.lua
Docs/: README.md
Scripts/Linux/: BuildAll.sh  GenerateProjects.sh  MakeReleaseBuild.sh
Scripts/Windows/: Build.bat  GenerateProjects.bat  MakeReleaseBuild.bat
Sources/: CMakeLists.txt
Sources/OvAudio/: premake5.lua
Sources/OvCore/: premake5.lua
Sources/OvDebug/: premake5.lua
Sources/OvEditor/: premake5.lua
Sources/OvGame/: premake5.lua
Sources/OvMaths/: premake5.lua
Sources/OvPhysics/: premake5.lua
Sources/OvRendering/: premake5.lua
Sources/OvTools/: premake5.lua
Sources/OvUI/: premake5.lua
Sources/OvWindowing/: premake5.lua
Sources/Overload/: premake5.lua
Sources/tinyxml2/: premake5.lua
Tests/OvLuaApiTests/: README.md  premake5.lua
(+584 files in other folders)
